# jin

./: .gitignore  CHANGELOG.md  DISTRIBUTION.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  exporter.rs  lib.rs  main.rs  parser.rs  scanner.rs  types.rs  watcher.rs
src/components/: AboutDialog.tsx  ConfigMatrix.tsx  Footer.tsx  Header.tsx  IssuesPanel.tsx  OnboardingTour.tsx  WelcomeScreen.tsx
src/components/ui/: badge.tsx  sidebar.tsx
src/store/: useFileWatcher.ts  useScan.ts
