[package]
name = "jin"
version = "0.1.0"
description = "Jin - The Config Whisperer. Tame your .envs, calm your configs."
authors = ["you"]
edition = "2021"

[[bin]]
name = "jin"
path = "src/main.rs"

[lib]
name = "jin_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-fs = "^2"
tauri-plugin-dialog = "^2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "^2"
